api: get and add todo
