# docs/swagger.json
@@ -5,6 +5,31 @@
     },
     "paths": {
         "/v1/todo": {
+            "get": {
+                "description": "API to add an item to todo list",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "endpoint to create todo item",
+                "operationId": "create-todo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Todo"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "API to add an item to todo list",
                 "produces": [
@@ -49,9 +74,23 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
